[metadata]
name = vk
version = attr: vk.__version__

author = Dmitry Voronin
author_email = dimka665@gmail.com
url = https://github.com/voronind/vk

description = Python vk.com API wrapper
keywords = vk.com api vk wrappper

license = MIT License
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: PyPy
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:

[bdist_wheel]
universal = 1

[tox:tox]
envlist = py35, py36, pypy3
skipsdist = true

[testenv]
skipinstall = true
passenv = TEST_APP_SERVICE_TOKEN
deps =
    ; 2018.7.1 contains error
    pipenv<2018.7
commands=
    pipenv install --dev --skip-lock
    pipenv run test
    py35: pipenv run doctest
    py35: pipenv run build-docs

[tool:pytest]
testpaths = tests docs/conf.py
norecursedirs =
    .*/
    doc/

[flake8]
max-line-length = 120
exclude =
    .*/,
    docs/_build/

[coverage:run]
branch = True
source =
    vk/

[mypy]
check_untyped_defs = yes
