[metadata]
name = vk
version = attr: vk.__version__

author = Dmitry Voronin
author_email = dimka665@gmail.com
url = https://github.com/voronind/vk

description = Python vk.com API wrapper
keywords = vk.com api vk wrappper

license = MIT License
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: PyPy
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:

[tox:tox]
envlist = py35, py36, pypy3, docs
skipsdist = true

[testenv]
skipinstall = true
passenv = TEST_APP_SERVICE_TOKEN
deps =
    ; 2018.7.1 contains error
    pipenv<2018.7
commands=
    pipenv install --dev --skip-lock
    pipenv run fulltest
    py35: pipenv run doctest
    py35: pipenv run build-docs

[testenv:docs]
basepython = python3.5
deps =
    ; 2018.7.1 contains error
    pipenv<2018.7
    sphinx
commands=
    pipenv install --skip-lock
    pipenv run doctest
    pipenv run build-docs

[tool:pytest]
testpaths = tests
norecursedirs =
    .*/
    docs/

[flake8]
max-line-length = 120
exclude =
    .*/,
    docs/_build/

[coverage:run]
source = vk
branch = True

[coverage:report]
fail_under = 50

[mypy]
check_untyped_defs = yes
